Implementation des componenets sans personnalisation

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
       content="Web site created using create-react-app"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
  
     <title>GESTIA</title>
   </head>
